--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m venv venv
-          source venv/bin/activate  # Activate the virtual environment
-          pip install -r requirements.txt  # Install required Python dependencies
+          source venv/bin/activate
+          pip install -r iot_requirements.txt
 
       # Step 4: Run the tests
       - name: Run tests
