--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -11,26 +11,30 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Python
-      - name: Set up Python
+      - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.9
 
-      # Step 3: Install dependencies
+      - name: Upgrade pip
+        run: |
+          python -m pip install --upgrade pip  # Upgrade pip to latest version
+
       - name: Install dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install -r iot_requirements.txt
+          pip install -r requirements.txt  # Install dependencies
 
-      # Step 4: Run the tests
+      - name: Check current directory
+        run: pwd
+
       - name: Run tests
         run: |
-          source venv/bin/activate  # Activate the virtual environment
-          python -m unittest discover -s tests  # This runs the tests in the tests directory
+          source venv/bin/activate
+          python -m unittest discover -s tests -p "test_*.py"  # Run tests from 'tests' directory
