--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt  # Install dependencies
+          pip install -r iot_requirements.txt  # Install dependencies
 
       - name: Check current directory
         run: pwd
