--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Upgrade pip
         run: |
-          python -m pip install --upgrade pip  # Upgrade pip to latest version
+          python -m pip install --upgrade pip
 
       - name: Install dependencies
         run: |
@@ -31,10 +31,10 @@ jobs:
           source venv/bin/activate
           pip install -r iot_requirements.txt  # Install dependencies
 
-      - name: Check current directory
-        run: pwd
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)/iot-simulation" >> $GITHUB_ENV  # Set Python path to the 'iot-simulation' directory
 
       - name: Run tests
         run: |
           source venv/bin/activate
-          python -m unittest discover -s tests -p "test_*.py"  # Run tests from 'tests' directory
+          python -m unittest discover -s tests -p "test_*.py"
