--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,40 +1,29 @@
-name: Python Tests
+name: IoT-Simulation Tests
 
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
-
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r iot_requirements.txt  # Install dependencies
+          python -m pip install --upgrade pip
+          pip install -r iot_requirements.txt
 
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$(pwd)/iot-simulation" >> $GITHUB_ENV  # Set Python path to the 'iot-simulation' directory
-
-      - name: Run tests
+      - name: Run unit tests
         run: |
-          source venv/bin/activate
-          python -m unittest discover -s tests -p "test_*.py"
+          python -m unittest discover -s iot-simulation -p "test_*.py"
